--- a/html/about.html
+++ b/html/about.html
@@ -48,42 +48,46 @@
             saepe dolorem optio minus sint nemo totam dolorum! Reprehenderit delectus expedita a alias nam recusandae
             illo debitis repellat libero, quasi explicabo molestiae saepe, dolorem tempore itaque eveniet quam
             dignissimos blanditiis excepturi harum numquam vel nihil! ipsum</p><br>
-        <h3 class="text-center">Our Products</h3><br>
-        <div class="container text-center">
-            <div class="row row-cols-4">
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../photos/pexels-photo-298863.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Men's Clothing<h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../photos/pexels-photo-7679720.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Women's Clothing</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../photos/pexels-photo-1927259.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Jewelery</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="../photos/pexels-photo-356056.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Electroniocs </h5>
-                        </div>
-                    </div>
+        <h3 class="text-center mb-4">Our Products</h3>
+
+<div class="container">
+    <div class="row g-4 text-center">
+        
+        <div class=" col-sm-12 col-md-6 col-lg-3">
+            <div class="card h-100">
+                <img src="../photos/pexels-photo-298863.jpeg" class="card-img-top img-fluid" alt="Men's Clothing">
+                <div class="card-body">
+                    <h5 class="card-title">Men's Clothing</h5>
                 </div>
             </div>
         </div>
-    </main>
-</body>
+
+        <div class=" col-sm-12 col-md-6 col-lg-3">
+            <div class="card h-100">
+                <img src="../photos/pexels-photo-7679720.jpeg" class="card-img-top img-fluid" alt="Women's Clothing">
+                <div class="card-body">
+                    <h5 class="card-title">Women's Clothing</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class=" col-sm-12 col-md-6 col-lg-3">
+            <div class="card h-100">
+                <img src="../photos/pexels-photo-1927259.webp" class="card-img-top img-fluid" alt="Jewelry">
+                <div class="card-body">
+                    <h5 class="card-title">Jewelry</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class=" col-sm-12 col-md-6 col-lg-3">
+            <div class="card h-100">
+                <img src="../photos/pexels-photo-356056.jpeg" class="card-img-top img-fluid" alt="Electronics">
+                <div class="card-body">
+                    <h5 class="card-title">Electronics</h5>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
