--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-   
+
 </head>
 
 <body>
@@ -30,8 +30,10 @@
                 </ul>
 
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i> Login</a>
-                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i> Register</a>
+                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i>
+                        Login</a>
+                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i>
+                        Register</a>
                     <a href="./cart.html" class="btn btn-outline-dark"><i class="bi bi-cart-fill"></i> Cart</a>
                 </div>
             </div>
@@ -50,44 +52,53 @@
             dignissimos blanditiis excepturi harum numquam vel nihil! ipsum</p><br>
         <h3 class="text-center mb-4">Our Products</h3>
 
-<div class="container">
-    <div class="row g-4 text-center">
-        
-        <div class=" col-sm-12 col-md-6 col-lg-3">
-            <div class="card h-100">
-                <img src="../photos/pexels-photo-298863.jpeg" class="card-img-top img-fluid" alt="Men's Clothing">
-                <div class="card-body">
-                    <h5 class="card-title">Men's Clothing</h5>
+        <div class="container">
+            <div class="row g-4 text-center">
+
+                <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class="card h-100">
+                        <img src="../photos/pexels-photo-298863.jpeg" class="card-img-top img-fluid"
+                            alt="Men's Clothing">
+                        <div class="card-body">
+                            <h5 class="card-title">Men's Clothing</h5>
+                        </div>
+                    </div>
                 </div>
+
+                <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class="card h-100">
+                        <img src="../photos/pexels-photo-7679720.jpeg" class="card-img-top img-fluid"
+                            alt="Women's Clothing">
+                        <div class="card-body">
+                            <h5 class="card-title">Women's Clothing</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class="card h-100">
+                        <img src="../photos/pexels-photo-1927259.webp" class="card-img-top img-fluid" alt="Jewelry">
+                        <div class="card-body">
+                            <h5 class="card-title">Jewelry</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" col-sm-12 col-md-6 col-lg-3">
+                    <div class="card h-100">
+                        <img src="../photos/pexels-photo-356056.jpeg" class="card-img-top img-fluid" alt="Electronics">
+                        <div class="card-body">
+                            <h5 class="card-title">Electronics</h5>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-        <div class=" col-sm-12 col-md-6 col-lg-3">
-            <div class="card h-100">
-                <img src="../photos/pexels-photo-7679720.jpeg" class="card-img-top img-fluid" alt="Women's Clothing">
-                <div class="card-body">
-                    <h5 class="card-title">Women's Clothing</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class=" col-sm-12 col-md-6 col-lg-3">
-            <div class="card h-100">
-                <img src="../photos/pexels-photo-1927259.webp" class="card-img-top img-fluid" alt="Jewelry">
-                <div class="card-body">
-                    <h5 class="card-title">Jewelry</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class=" col-sm-12 col-md-6 col-lg-3">
-            <div class="card h-100">
-                <img src="../photos/pexels-photo-356056.jpeg" class="card-img-top img-fluid" alt="Electronics">
-                <div class="card-body">
-                    <h5 class="card-title">Electronics</h5>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
+    </main><br><br><br>
+    <footer>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
+    </footer>
