--- a/html/contact.html
+++ b/html/contact.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="../css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  
+
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-Nav">
@@ -30,8 +30,10 @@
                 </ul>
 
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i> Login</a>
-                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i> Register</a>
+                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i>
+                        Login</a>
+                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i>
+                        Register</a>
                     <a href="./cart.html" class="btn btn-outline-dark"><i class="bi bi-cart-fill"></i> Cart</a>
                 </div>
             </div>
@@ -39,7 +41,8 @@
     </header>
     <main><br>
 
-        <h1 class="text-center">Contact Us</h1><br><br>
+        <h1 class="text-center">Contact Us</h1>
+        <hr><br><br>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column flex-wrap gap-1 ">
                 <h6>Name</h6>
@@ -55,16 +58,22 @@
                 <div class="pb-5">
                     <textarea class="form-control" rows="4" placeholder="Enter Your Message"></textarea>
                 </div>
-             </div>
+            </div>
         </div>
-        <div  class="text-center">
-        <button style="background-color: black;color: white;">send</button>
+        <div class="text-center mt-3">
+            <button class="btn btn-dark px-4">Send</button>
         </div>
-        
 
-    </main>
+
+        </div>
+
+
+    </main><br><br><br>
     <footer>
-        <h6 class="text-center">Made With <i class="bi bi-heart-fill text-danger"></i> by<a href="#" class="text-dark"> Vamsi</a></h6>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
     </footer>
 
 </body>
