--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-Nav">
@@ -39,8 +39,8 @@
             </div>
         </nav>
     </header>
-    <main>
-        <h1 class="text-center">About us</h1><br>
+    <main><br>
+        <h1 class="text-center">About us</h1><hr><br>
         <p class="mx-5 px-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum facere
             doloremque veritatis odit similique sequi. Odit amet fuga nam quam quasi facilis sed doloremque saepe sint
             perspiciatis explicabo totam vero quas provident ipsam, veritatis nostrum velit quos recusandae est mollitia
