--- a/html/cart.html
+++ b/html/cart.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-Nav">
@@ -40,8 +40,8 @@
     </header><main>
 
 
-        <h1 class=" text-center" style="margin-top:2%;">Cart</h1>
-        <hr style="width:80% ;margin-left: 10%;border:2px solid black">
+        <h1 class=" text-center" style="margin-top:2%;">Cart</h1><hr>
+        
 
 
 
