--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="bg-white">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-Nav">
@@ -51,7 +51,7 @@
             </div>
         </div><br><br>
         <div class="container my-5">
-            <h1 class="text-center mb-5">Latest Products</h1>
+            <h1 class="text-center mb-5">Latest Products</h1><hr>
             <div class="d-flex flex-wrap gap-2 justify-content-center mb-5">
                 <a href="#" class="btn btn-outline-dark">All</a>
                 <a href="#" class="btn btn-outline-dark">Men's Clothing</a>
