--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-Nav">
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center">Contact Us</h1><br><br>
+        <h1 class="text-center">Contact Us</h1><hr><br><br>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column flex-wrap gap-1 ">
 
