--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,8 @@
         </nav>
     </header>
     <main><br>
-        <h1 class="text-center">About us</h1><hr><br>
+        <h1 class="text-center">About us</h1>
+        <hr><br>
         <p class="mx-5 px-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum facere
             doloremque veritatis odit similique sequi. Odit amet fuga nam quam quasi facilis sed doloremque saepe sint
             perspiciatis explicabo totam vero quas provident ipsam, veritatis nostrum velit quos recusandae est mollitia
@@ -102,3 +103,5 @@
             <a href="#" class="text-dark ">Vamsi</a>
         </h6>
     </footer>
+</body>
+</html>
