--- a/html/cart.html
+++ b/html/cart.html
@@ -258,20 +258,13 @@
 
 
 
-    </main>
+    </main><br><br>
 
-
-
-
-
-
-
-
-
-
-
-    <footer class="text-center fs-4 ">
-        <p>Made with <i class="bi bi-heart-fill text-danger"></i> by Bhanu-D-U</p>
+ <footer>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
     </footer>
 
 
