--- a/html/home.html
+++ b/html/home.html
@@ -493,10 +493,12 @@
                     </div>
                 </div>
             </div>
-    </main>
+    </main><br><br>
     <footer>
-        <h6 class="text-center">Made With <i class="bi bi-heart-fill text-danger"></i> by<a href="#" class="text-dark">
-                Vamsi</a></h6>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
     </footer>
 
 
