--- a/html/login.html
+++ b/html/login.html
@@ -56,13 +56,15 @@
                     <p>New Here?</p><span><a href="#">Register</a></span>
                 </div>
             </div>
-        </div>
-        <div class="text-center">
+        </div><br>
+        <div class="text-center ">
             <button style="background-color: rgb(54, 54, 54);color: white;" class="rounded-3 p-2">Login</button>
         </div>
-    </main>
-    <footer>
-        <h6 class="text-center">Made With <i class="bi bi-heart-fill text-danger"></i> by<a href="#" class="text-dark">
-                Vamsi</a></h6>
+    </main><br><br>
+   <footer>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
     </footer>
 </body>
