--- a/html/register.html
+++ b/html/register.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -65,9 +65,11 @@
         <div class="text-center">
             <button style="background-color: rgb(54, 54, 54);color: white;" class="rounded-3 p-2">Register</button>
         </div>
-    </main>
+    </main><br><br>
     <footer>
-        <h6 class="text-center">Made With <i class="bi bi-heart-fill text-danger"></i> by<a href="#" class="text-dark">
-                Vamsi</a></h6>
+        <h6 class="text-center mb-0 lh-lg">
+            Made with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="#" class="text-dark ">Vamsi</a>
+        </h6>
     </footer>
 </body>
