--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center">Contact Us</h1><hr><br><br>
+        <h1 class="text-center">Login</h1><hr><br><br>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column flex-wrap gap-1 ">
 
@@ -53,7 +53,7 @@
 
 
                 <div class="d-flex">
-                    <p>New Here?</p><span><a href="#">Register</a></span>
+                    <p>New Here?</p><span><a href="register.html">Register</a></span>
                 </div>
             </div>
         </div><br>
