--- a/html/contact.html
+++ b/html/contact.html
@@ -40,9 +40,7 @@
         </nav>
     </header>
     <main><br>
-
-        <h1 class="text-center">Contact Us</h1>
-        <hr><br><br>
+         <h1 class="text-center">Contact Us</h1> <hr><br><br>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column flex-wrap gap-1 ">
                 <h6>Name</h6>
@@ -77,3 +75,4 @@
     </footer>
 
 </body>
+</html>
