--- a/html/login.html
+++ b/html/login.html
@@ -49,7 +49,7 @@
                 <h6>Password</h6>
                 <div style="width: 300px;">
                     <input type="text" class="form-control" placeholder="Password">
-                </div>
+                </div><br>
 
 
                 <div class="d-flex">
