--- a/html/register.html
+++ b/html/register.html
@@ -58,7 +58,7 @@
 
 
                 <div class="d-flex">
-                    <p>Already has an account?</p><span><a href="#">Login</a></span>
+                    <p>Already has an account?</p><span><a href="login.html">Login</a></span>
                 </div>
             </div>
         </div>
