--- a/html/product.html
+++ b/html/product.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <main><br>
+    <main>
          <div class="container my-5">
             <h1 class="text-center mb-5">Latest Products</h1>
             <hr class="w-100">
