--- a/html/register.html
+++ b/html/register.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main><br>
         <h1 class="text-center">Register</h1><hr><br><br>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column flex-wrap gap-1 ">
