--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header>
+    <header class="bg-white">
         <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
@@ -73,6 +73,8 @@
             <a href="#" class="text-dark ">Vamsi</a>
         </h6>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 </html>
