--- a/html/login.html
+++ b/html/login.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-   
+
 </head>
 
 <body>
 
-    <header>
+    <header class="bg-white">
         <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
@@ -30,8 +30,10 @@
                 </ul>
 
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i> Login</a>
-                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i> Register</a>
+                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i>
+                        Login</a>
+                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i>
+                        Register</a>
                     <a href="./cart.html" class="btn btn-outline-dark"><i class="bi bi-cart-fill"></i> Cart</a>
                 </div>
             </div>
@@ -67,4 +69,7 @@
             <a href="#" class="text-dark ">Vamsi</a>
         </h6>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+</html>
