--- a/html/product.html
+++ b/html/product.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
+    
 </head>
 
 <body>
 
-    <header class="bg-white">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary px-4 py-3">
             <a class="navbar-brand fw-bold fs-2 text-dark" href="#">E-Commerce</a>
 
@@ -23,23 +23,21 @@
 
             <div class="collapse navbar-collapse " id="navbar-Nav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark  " href="home.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="./product.html">Product</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="./about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="./contact.html">Contact</a></li>
                 </ul>
 
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i>
-                        Login</a>
-                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i>
-                        Register</a>
+                    <a href="./login.html" class="btn btn-outline-dark"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+                    <a href="./register.html" class="btn btn-outline-dark"><i class="bi bi-person-fill-add"></i> Register</a>
                     <a href="./cart.html" class="btn btn-outline-dark"><i class="bi bi-cart-fill"></i> Cart</a>
                 </div>
             </div>
         </nav>
     </header>
-    <main>
+    <main><br>
          <div class="container my-5">
             <h1 class="text-center mb-5">Latest Products</h1>
             <hr class="w-100">
@@ -78,15 +76,15 @@
 
                         <div class="col d-flex justify-content-center mb-5">
                             <div class="card card-last" style="width: 20rem;">
-                                <img src="../photos/51UDEzMJVpL._AC_UL640_QL65_ML3_.jpg" class="card-img-top" alt="...">
+                                <img src="../photos/81XH0e8fefL._AC_UY879_.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">red T-shirt</h5>
-                                    <p class="card-text">100% Polyester, Machine wash, 100%
-                                        cationic polyester interlock, Machine
-                                        Wash & Pre Shrunk.
-                                    </p>
+                                    <h5 class="card-title">Lock and Lov.</h5>
+                                    <p class="card-text">
+                                        100% POLYURETHANE(shell) 100%POLYESTER(lining) 75% POLYESTER 25% COTTON
+                                        (SWEATER), Faux
+                                        I...</p>
                                     <hr style="width:100%; margin-bottom:10px;">
-                                    <p>$210</p>
+                                    <p>$200</p>
                                     <hr style="width:100%; margin:0;">
                                     <nav class="py-3 ">
                                         <a href="#" class="btn btn-dark me-3">Details</a>
@@ -436,17 +434,18 @@
 
                         </div>
 
+                       
                         <div class="col d-flex justify-content-center mb-5">
                             <div class="card card-last" style="width: 20rem;">
-                                <img src="../photos/81XH0e8fefL._AC_UY879_.jpg" class="card-img-top" alt="...">
+                                <img src="../photos/51UDEzMJVpL._AC_UL640_QL65_ML3_.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Lock and Lov.</h5>
-                                    <p class="card-text">
-                                        100% POLYURETHANE(shell) 100%POLYESTER(lining) 75% POLYESTER 25% COTTON
-                                        (SWEATER), Faux
-                                        I...</p>
+                                    <h5 class="card-title">red T-shirt</h5>
+                                    <p class="card-text">100% Polyester, Machine wash, 100%
+                                        cationic polyester interlock, Machine
+                                        Wash & Pre Shrunk.
+                                    </p>
                                     <hr style="width:100%; margin-bottom:10px;">
-                                    <p>$200</p>
+                                    <p>$210</p>
                                     <hr style="width:100%; margin:0;">
                                     <nav class="py-3 ">
                                         <a href="#" class="btn btn-dark me-3">Details</a>
