--- a/html/home.html
+++ b/html/home.html
@@ -39,7 +39,18 @@
             </div>
         </nav>
     </header>
-     <div class="container my-5">
+    <main>
+        <div class="card text-bg-dark ms-2 me-4 ">
+            <img src="../photos/main.png.jpg" class="card-img custom-img" alt="logo">
+            <div class="card-img-overlay d-flex flex-column justify-content-center align-items-start">
+                <h1 class="card-title">New Season Arrivals</h1>
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to additional content.
+                    <span>This content is a little bit longer.</span>
+                </p>
+            </div>
+        </div><br><br>
+        <div class="container my-5">
             <h1 class="text-center mb-5">Latest Products</h1>
             <hr class="w-100">
             <div class="d-flex flex-wrap gap-2 justify-content-center mb-5">
@@ -481,12 +492,10 @@
                     </div>
                 </div>
             </div>
-    </main><br><br>
+    </main>
     <footer>
-        <h6 class="text-center mb-0 lh-lg">
-            Made with <i class="bi bi-heart-fill text-danger"></i> by
-            <a href="#" class="text-dark ">Vamsi</a>
-        </h6>
+        <h6 class="text-center">Made With <i class="bi bi-heart-fill text-danger"></i> by<a href="#" class="text-dark">
+                Vamsi</a></h6>
     </footer>
 
 
